--- a/src/main/resources/com/fsb/networked/SignInPage.fxml
+++ b/src/main/resources/com/fsb/networked/SignInPage.fxml
@@ -11,13 +11,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fsb.networked.controllers.SignInController">
+<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fsb.networked.controllers.SignInController">
    <children>
       <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="1242.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
@@ -55,7 +54,7 @@
             </ImageView>
             <VBox prefHeight="370.0" prefWidth="633.0" GridPane.rowIndex="2" GridPane.rowSpan="2">
                <children>
-                  <TextField fx:id="emailAddressField" maxHeight="69.0" maxWidth="700.0" prefHeight="69.0" prefWidth="614.0" promptText="Email address : (abc@xyz)">
+                  <TextField fx:id="emailAddressField" maxHeight="70.0" maxWidth="700.0" prefHeight="70.0" prefWidth="626.0" promptText="Email address : (abc@xyz)">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
@@ -63,31 +62,36 @@
                         <Font name="Consolas Bold" size="30.0" />
                      </font>
                   </TextField>
-                  <HBox alignment="CENTER" prefHeight="78.0" prefWidth="722.0" VBox.vgrow="NEVER">
+
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
-                        <PasswordField fx:id="passwordField" maxHeight="80.0" maxWidth="600.0" prefHeight="78.0" prefWidth="538.0" promptText="Password: ">
+                        <PasswordField fx:id="passwordField" layoutY="10.0" prefHeight="82.0" prefWidth="686.0" promptText="password">
+                           <font>
+                              <Font size="38.0" />
+                           </font></PasswordField>
+                        <TextField fx:id="invisibleTextField" layoutX="-2.0" layoutY="13.0" prefHeight="70.0" prefWidth="686.0" visible="false">
                            <font>
                               <Font name="Consolas Bold" size="30.0" />
-                           </font>
-                        </PasswordField>
-                        <Button fx:id="btnTogglePasswordVisibile" mnemonicParsing="false" onAction="#togglePasswordVisible" text="show password">
-                           <font>
-                              <Font size="16.0" />
-                           </font>
+                           </font></TextField>
+                        <Button fx:id="btnTogglePasswordVisible" layoutX="590.0" layoutY="31.0" mnemonicParsing="false" onAction="#togglePasswordVisible" prefHeight="40.0" prefWidth="82.0" text="Show">
+                        <font>
+                           <Font size="18.0" />
+                        </font>
                         </Button>
+
                      </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
-                  </HBox>
+
+                  </AnchorPane>
+
+
                   <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0">
                     <buttons>
-                        <Button fx:id="btnSignIn" layoutX="518.0" layoutY="10.0" mnemonicParsing="false" onAction="#doSignIn" prefHeight="49.0" prefWidth="178.0" text="Sign In">
+                        <Button fx:id="btnForgotPassword" mnemonicParsing="false" onAction="#resetPassword" prefHeight="49.0" prefWidth="239.0" text="ForgotPassword">
                            <font>
                               <Font name="Calibri" size="27.0" />
                            </font>
                         </Button>
-                        <Button fx:id="btnForgotPassword" mnemonicParsing="false" onAction="#resetPassword" text="Forgot Password ?">
+                        <Button fx:id="btnSignIn" layoutX="518.0" layoutY="10.0" mnemonicParsing="false" onAction="#doSignIn" prefHeight="49.0" prefWidth="178.0" text="Sign In">
                            <font>
                               <Font name="Calibri" size="27.0" />
                            </font>
